engine-net-2/examples/Errors/RuleNameUsageBlockedByVariableOfSameName.grs
new graph "Rules.grg"

exec (n:N)=init ;> r:boolean=false ;> (m:M)=r(n)

quit
